--- a/src/main/resources/templates/everymap.html
+++ b/src/main/resources/templates/everymap.html
@@ -7,9 +7,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Everymap</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
+  <link rel="stylesheet" type="text/css" th:href="@{/css/everymap.css}">
 </head>
 <body>
-  <div id="map" style="width: 100%; height: 500px"></div>
+  <div id="map"></div>
+  <div class="btn-grp">
+    <button id="road-view-btn">로드뷰</button>
+  </div>
+
+  <div id="roadview-modal">
+    <button id="close-roadview">X</button>
+    <div id="roadview-target"></div>
+  </div>
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a0dcca88f3f14dfb8b0363e1e86d3087"></script>
   <script src="https://cdn.jsdelivr.net/npm/ol@v9.2.4/dist/ol.js"></script>
   <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/map.js}"></script>
