--- a/src/main/resources/templates/everymap.html
+++ b/src/main/resources/templates/everymap.html
@@ -8,6 +8,7 @@
   <title>Everymap</title>
   <link rel="stylesheet" type="text/css" th:href="@{/css/common.css}">
   <link rel="stylesheet" type="text/css" th:href="@{/css/everymap.css}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/ol@v9.2.4/ol.css">
 </head>
 <body>
   <div id="map"></div>
@@ -21,6 +22,7 @@
   </div>
   <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=a0dcca88f3f14dfb8b0363e1e86d3087"></script>
   <script src="https://cdn.jsdelivr.net/npm/ol@v9.2.4/dist/ol.js"></script>
+
   <script th:src="@{/js/common.js}"></script>
   <script th:src="@{/js/map.js}"></script>
 </body>
