--- a/src/main/resources/static/css/everymap.css
+++ b/src/main/resources/static/css/everymap.css
@@ -1,9 +1,16 @@
 body {
   margin: 0;
+  display: flex;
+
+}
+#info-tab{
+  width:20vw;
+  height: 100vh;
+  background-color: white;
 }
 #map{
   z-index: 0;
-  width: 100vw;
+  width: 80vw;
   height: 100vh;
 }
 .btn-grp{
