ai 경로요약 api 요청 기능 추가

--- a/src/main/resources/templates/everymap.html
+++ b/src/main/resources/templates/everymap.html
@@ -16,6 +16,7 @@
     <div class="info-contents-wrapper">
       <h1>everymap</h1>
       <canvas id="chart"></canvas>
+      <div id="prompt-result"></div>
     </div>
   </div>
   <div id="map"></div>
