feat: 보행안내 채팅 UI 추가

--- a/src/main/resources/static/css/common.css
+++ b/src/main/resources/static/css/common.css
@@ -13,3 +13,10 @@
   width: 257px;
   height: 256px;
 }
+
+.floating-box {
+  position: fixed;
+  top: 20px;
+  left: 20px;
+  z-index: 1000; /* Ensure it floats above other content */
+}
