feat: typing.js, chart 관련기능추가
- card-wrapper 추가 및 일정 크기 이상시 스크롤
- type.js 작동중 스크롤이 있을시 스크롤 최하단으로 이동
- 유동인구 차트 UI 생성
- 차트 최고 값 label생성
- 차트 요일변경 기능 추가

--- a/src/main/resources/static/css/everymap.css
+++ b/src/main/resources/static/css/everymap.css
@@ -42,3 +42,17 @@ body {
   background-color: white;
   border: 1px solid;
 }
+
+.card-body-wrapper{
+  height: calc(100vh - 270px - 56px - 20px);
+  overflow-y: scroll;
+}
+#chart{
+  height: 200px;
+}
+.chart-wrapper{
+  height: 250px;
+}
+.day-btn-grp{
+  text-align: center;
+}
