feat: 좌표선택 및 길찾기 요청 방식 변경
- 출발,도착 좌표선택방식 우클릭을 통한 선택으로 변경
- 길찾기 버튼 클릭시 요청하도록 변경

--- a/src/main/resources/templates/everymap.html
+++ b/src/main/resources/templates/everymap.html
@@ -24,6 +24,7 @@
   </div>-->
   <div id="map"></div>
   <div class="btn-grp">
+    <button type="button" id="find-route" class="btn btn-success">길찾기</button>
     <button type="button" id="road-view-btn" class="btn btn-success">로드뷰</button>
   </div>
 
