feat: met경로, 안전경로 기능 추가

--- a/src/main/resources/templates/everymap.html
+++ b/src/main/resources/templates/everymap.html
@@ -32,7 +32,7 @@
             </button>
           </h2>
           <div id="flush-collapseOne" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the first item's accordion body.</div>
+            <div id="shortest-info-content" class="accordion-body"></div>
           </div>
         </div>
         <div class="accordion-item">
@@ -42,17 +42,17 @@
             </button>
           </h2>
           <div id="flush-collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div id="met-path-btn" class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
+            <div id="safety-info-content" class="accordion-body"></div>
           </div>
         </div>
         <div class="accordion-item">
           <h2 class="accordion-header">
-            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
+            <button id="met-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
               MET 경로
             </button>
           </h2>
           <div id="flush-collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
-            <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the third item's accordion body. Nothing more exciting happening here in terms of content, but just filling up the space to make it look, at least at first glance, a bit more representative of how this would look in a real-world application.</div>
+            <div id="met-info-content" class="accordion-body"></div>
           </div>
         </div>
       </div>
@@ -123,7 +123,7 @@
   <script th:src="@{/js/fetch-api.js}"></script>
   <script>
     function initChatbot() {
-      animateTyping('#chat-0', "안녕하세요!<br/>보행 약자를 위한 안전 경로 가이드 봇 입니다.<br/><br/>지도에서 출발지와 도착지를 선택해주세요.", 30);
+      animateTyping('#chat-0', "안녕하세요!<br/>보행 약자를 위한 안전 경로 가이드 봇 입니다.<br/><br/>지도에서 출발지와 도착지를 선택해주세요.");
     }
     document.addEventListener("DOMContentLoaded", () => {
       initChatbot();
