--- a/src/main/resources/templates/everymap.html
+++ b/src/main/resources/templates/everymap.html
@@ -120,7 +120,7 @@
 <!--            <div id="met-pop-info-content" class="accordion-body"></div>-->
 <!--          </div>-->
 <!--        </div>-->
-      </div>
+<!--      </div>-->
 
     </div>
   </div>
