--- a/src/main/resources/templates/everymap.html
+++ b/src/main/resources/templates/everymap.html
@@ -59,68 +59,68 @@
           </div>
         </div>
 
-<!--        <div class="accordion-item">-->
-<!--          <h2 class="accordion-header">-->
-<!--            <button id="astar-shortest-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseOne">-->
-<!--              Astar-최단 경로-->
-<!--            </button>-->
-<!--          </h2>-->
-<!--          <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">-->
-<!--            <div id="astar-shortest-info-content" class="accordion-body"></div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="accordion-item">-->
-<!--          <h2 class="accordion-header">-->
-<!--            <button id="astar-safety-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseTwo">-->
-<!--              Astar-안전 경로-->
-<!--            </button>-->
-<!--          </h2>-->
-<!--          <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">-->
-<!--            <div id="astar-safety-info-content" class="accordion-body"></div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="accordion-item">-->
-<!--          <h2 class="accordion-header">-->
-<!--            <button id="astar-met-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseThree">-->
-<!--              Astar-MET 경로-->
-<!--            </button>-->
-<!--          </h2>-->
-<!--          <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">-->
-<!--            <div id="astar-met-info-content" class="accordion-body"></div>-->
-<!--          </div>-->
-<!--        </div>-->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button id="astar-shortest-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFour" aria-expanded="false" aria-controls="flush-collapseOne">
+              Astar-최단 경로
+            </button>
+          </h2>
+          <div id="flush-collapseFour" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div id="astar-shortest-info-content" class="accordion-body"></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button id="astar-safety-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseFive" aria-expanded="false" aria-controls="flush-collapseTwo">
+              Astar-안전 경로
+            </button>
+          </h2>
+          <div id="flush-collapseFive" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div id="astar-safety-info-content" class="accordion-body"></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button id="astar-met-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSix" aria-expanded="false" aria-controls="flush-collapseThree">
+              Astar-MET 경로
+            </button>
+          </h2>
+          <div id="flush-collapseSix" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div id="astar-met-info-content" class="accordion-body"></div>
+          </div>
+        </div>
 
-<!--        <div class="accordion-item">-->
-<!--          <h2 class="accordion-header">-->
-<!--            <button id="shortest-pop-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseOne">-->
-<!--              최단 경로 feat: 유동인구-->
-<!--            </button>-->
-<!--          </h2>-->
-<!--          <div id="flush-collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">-->
-<!--            <div id="shortest-pop-info-content" class="accordion-body"></div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="accordion-item">-->
-<!--          <h2 class="accordion-header">-->
-<!--            <button id="safety-pop-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseTwo">-->
-<!--              안전 경로 feat: 유동인구-->
-<!--            </button>-->
-<!--          </h2>-->
-<!--          <div id="flush-collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">-->
-<!--            <div id="safety-pop-info-content" class="accordion-body"></div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--        <div class="accordion-item">-->
-<!--          <h2 class="accordion-header">-->
-<!--            <button id="met-pop-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseNine">-->
-<!--              MET 경로 feat: 유동인구-->
-<!--            </button>-->
-<!--          </h2>-->
-<!--          <div id="flush-collapseNine" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">-->
-<!--            <div id="met-pop-info-content" class="accordion-body"></div>-->
-<!--          </div>-->
-<!--        </div>-->
-<!--      </div>-->
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button id="shortest-pop-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseSeven" aria-expanded="false" aria-controls="flush-collapseOne">
+              최단 경로 feat: 유동인구
+            </button>
+          </h2>
+          <div id="flush-collapseSeven" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div id="shortest-pop-info-content" class="accordion-body"></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button id="safety-pop-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseEight" aria-expanded="false" aria-controls="flush-collapseTwo">
+              안전 경로 feat: 유동인구
+            </button>
+          </h2>
+          <div id="flush-collapseEight" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div id="safety-pop-info-content" class="accordion-body"></div>
+          </div>
+        </div>
+        <div class="accordion-item">
+          <h2 class="accordion-header">
+            <button id="met-pop-path-btn" class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseNine">
+              MET 경로 feat: 유동인구
+            </button>
+          </h2>
+          <div id="flush-collapseNine" class="accordion-collapse collapse" data-bs-parent="#accordionFlushExample">
+            <div id="met-pop-info-content" class="accordion-body"></div>
+          </div>
+        </div>
+      </div>
 
     </div>
   </div>
